# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  30 Jun 2007; Roy Marples <uberlord@gentoo.org>:

    Don't set an early font if consolefont isn't in a runlevel, #183773.

  27 Jun 2007; Roy Marples <uberlord@gentoo.org>:

    Add --no-ldconfig option to env-update to match portage.

  26 Jun 2007; Roy Marples <uberlord@gentoo.org>:

    --nocolor works again, #181011 thanks to Daniel Drake.
    Change pwd to / for all init scripts, #181224.

  21 Jun 2007; Mike Frysinger <vapier@gentoo.org>:

    Allow urandom location to be customized #134489.

  02 Jun 2007; Mike Frysinger <vapier@gentoo.org>:

    Fix from comio for /proc/filesystems typo in localmount #180621.

    Use -q option with modprobe rather than sending to /dev/null.

  31 May 2007; Mike Frysinger <vapier@gentoo.org>:

    Don't warn about Factory clock when booting off of livecd.

  30 May 2007; Roy Marples <uberlord@gentoo.org>:

    Only call systohw in clock when we don't have adjfile or we aren't UTC.
    Use killall5 again so we can cleanly remount / readonly, #168977
    and #177689.

* baselayout-2.0.0_alpha3 (14 May 2007)

  14 May 2007; Roy Marples <uberlord@gentoo.org>:

    RC_INTERACTIVE now works, #178331.
    Add --startas back to s-s-d, #175980, #175981.
    Allow time for pidfiles to be created, #178274.
    Use int instead of char for getopt, #177202 #178084 thanks to drizztbsd.

  11 May 2007; Roy Marples <uberlord@gentoo.org>:

    Store the defined random pool size, #177722 thanks to Yaroslav Isakov.
    Use auto for /mnt/cdrom, #177990.
	Use clock MONOTONIC to timeout, not localtime, #177514.

  08 May 2007; Roy Marples <uberlord@gentoo.org>:

    When we don't have an address return 1, #176577.

  05 May 2007; Roy Marples <uberlord@gentoo.org>:

    Fix KV_to_int working with funky kernel versions, #177197.

* baselayout-2.0.0_alpha2 (04 May 2007)

  04 May 2007; Roy Marples <uberlord@gentoo.org>:
